# probabilistic_model

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: publish-to-pypi.yml  python-tests.yml
book/: _config.yml  _toc.yml  graphical_models.md  probability_theory.md  queries.md  references.bib
doc/: _config.yml  _toc.yml  architecture.md  circuits.md  conf.py  distributions.rst  examples.rst  general_remarks.md  glossary.md  graphical_models.md  index.rst  intro.md  joint_probability_trees.md  layered_circuit.md  list_all_classes.py  nyga_distribution.md  pc_guide.md  pendulum.md  probabilistic_circuits.rst  probability_theory.md  queries.md  references.bib  requirements.txt  template_modelling.md  truncated_gaussian.md  uniform_profiling.md
doc/_static/: style.css
examples/: area_validation_metric.ipynb  data.df  joint_probability_trees.ipynb  nyga_distribution.ipynb  pendulum.ipynb  probability_theory.ipynb  probability_theory.md  shallow-analysis.py  template_modelling.ipynb  truncated_gaussians.ipynb
scripts/: gmm.py  jpt_speed_comparison.py  mlflow_example.py  mnist.ipynb  nyga_speed_comparison.py  speed_sampling.py
src/: constants.py
src/probabilistic_model/: Monte_Carlo_Estimator.py  bayesian_network.py  (+9 more)
test/: test_bayesian_network.py  test_boosting.py  test_distributions.py  test_graph_circuit.py  test_jpt.py  test_nyga_distribution.py  test_probabilistic_circuit.py  test_probabilistic_model.py  test_units.py  test_utils.py
(+136 files in other folders)
